--- a/Ab.xcodeproj/xcshareddata/xcschemes/BaseProject.xcscheme
+++ b/Ab.xcodeproj/xcshareddata/xcschemes/BaseProject.xcscheme
@@ -16,22 +16,46 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "71A280CB2BF7509E002F1557"
-               BuildableName = "BaseProject.app"
-               BlueprintName = "BaseProject"
-               ReferencedContainer = "container:BaseProject.xcodeproj">
+               BuildableName = "Ab.app"
+               BlueprintName = "Ab"
+               ReferencedContainer = "container:Ab.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug (Prod)"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "71A280E12BF750A3002F1557"
+               BuildableName = "AbTests.xctest"
+               BlueprintName = "AbTests"
+               ReferencedContainer = "container:Ab.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "71A280EB2BF750A3002F1557"
+               BuildableName = "AbUITests.xctest"
+               BlueprintName = "AbUITests"
+               ReferencedContainer = "container:Ab.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug (Prod)"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -45,14 +69,14 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "71A280CB2BF7509E002F1557"
-            BuildableName = "BaseProject.app"
-            BlueprintName = "BaseProject"
-            ReferencedContainer = "container:BaseProject.xcodeproj">
+            BuildableName = "Ab.app"
+            BlueprintName = "Ab"
+            ReferencedContainer = "container:Ab.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release (Prod)"
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -62,17 +86,17 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "71A280CB2BF7509E002F1557"
-            BuildableName = "BaseProject.app"
-            BlueprintName = "BaseProject"
-            ReferencedContainer = "container:BaseProject.xcodeproj">
+            BuildableName = "Ab.app"
+            BlueprintName = "Ab"
+            ReferencedContainer = "container:Ab.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug (Prod)">
+      buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release (Prod)"
+      buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
