--- a/Ab.xcodeproj/xcshareddata/xcschemes/Staging.xcscheme
+++ b/Ab.xcodeproj/xcshareddata/xcschemes/Staging.xcscheme
@@ -16,22 +16,22 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "71A280CB2BF7509E002F1557"
-               BuildableName = "BaseProject.app"
-               BlueprintName = "BaseProject"
-               ReferencedContainer = "container:BaseProject.xcodeproj">
+               BuildableName = "Ab.app"
+               BlueprintName = "Ab"
+               ReferencedContainer = "container:Ab.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug (Dev)"
+      buildConfiguration = "Debug (Stage)"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug (Dev)"
+      buildConfiguration = "Debug (Stage)"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -45,14 +45,14 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "71A280CB2BF7509E002F1557"
-            BuildableName = "BaseProject.app"
-            BlueprintName = "BaseProject"
-            ReferencedContainer = "container:BaseProject.xcodeproj">
+            BuildableName = "Ab.app"
+            BlueprintName = "Ab"
+            ReferencedContainer = "container:Ab.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release (Dev)"
+      buildConfiguration = "Release (Stage)"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -62,17 +62,17 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "71A280CB2BF7509E002F1557"
-            BuildableName = "BaseProject.app"
-            BlueprintName = "BaseProject"
-            ReferencedContainer = "container:BaseProject.xcodeproj">
+            BuildableName = "Ab.app"
+            BlueprintName = "Ab"
+            ReferencedContainer = "container:Ab.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug (Dev)">
+      buildConfiguration = "Debug (Stage)">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release (Dev)"
+      buildConfiguration = "Release (Stage)"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
